--- a/1-tutorial/08-paragraphs/exemplo.html
+++ b/1-tutorial/08-paragraphs/exemplo.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Paragraphs - Exemplo 01</title>
+  <title>HTML Paragraphs - Exemplo</title>
   <link rel="stylesheet" href="../../assets/principal.css">
 </head>
 
 <body>
-  <h1>HTML Paragraphs - Exemplo 01</h1> 
+  <h1>HTML Paragraphs - Exemplo</h1> 
   
   <p>Primeiro parágrafo com lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem impedit dignissimos, natus fuga commodi in veniam nihil aspernatur quia est.</p>
   <hr>
