--- a/1-tutorial/16-images/exemplo01.html
+++ b/1-tutorial/16-images/exemplo01.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Images</title>
+  <title>HTML Images - Exemplo 01</title>
   <link rel="stylesheet" href="../../assets/principal.css">
 </head>
 
@@ -13,8 +13,8 @@
   
   <picture>
     <source media="(min-width: 800px)" srcset="https://www.w3schools.com/css/img_man.jpg">
-    <source media="(min-width: 600px)" srcset="../../imagens/img_girl.jpg">
-    <img src="../../imagens/img_tree.png" alt="Imagem de uma árvore com uma coruja num galho">
+    <source media="(min-width: 600px)" srcset="../../assets/img_girl.jpg">
+    <img src="../../assets/img_tree.png" alt="Imagem de uma árvore com uma coruja num galho">
   </picture>
 
   <a href="../../index.html">Voltar</a>
