--- a/1-tutorial/16-images/exercicios.html
+++ b/1-tutorial/16-images/exercicios.html
@@ -15,14 +15,14 @@
   <p>Set the size of the image to 250 pixels wide and 400 pixels tall.</p>
 
   <section class="atividade">
-    <img src="../../imagens/img_girl.jpg" alt="Foto de uma pessoa bem agasalhada de costas" style="height:400px;width:250px">
+    <img src="../../assets/img_girl.jpg" alt="Foto de uma pessoa bem agasalhada de costas" style="height:400px;width:250px">
   </section>
 
   <h2>Exercício 2</h2>
   <p>Add the correct HTML attribute to display the "smiley.gif" image.</p>
 
   <section class="atividade">
-    <img src="../../imagens/smiley.gif" alt="Smiley">
+    <img src="../../assets/smiley.gif" alt="Smiley">
   </section>
 
   <a href="../../index.html">Voltar</a>
