--- a/1-tutorial/24-iframes/exercicios.html
+++ b/1-tutorial/24-iframes/exercicios.html
@@ -18,8 +18,8 @@
     <li>Use CSS to display an iframe with no borders.</li>
   </ol>
 
-  <section class="atividade">
-    <iframe src="https://rafa-san.github.io/curso-em-video-html-css/" style="border:none;width:300px;"></iframe>
+  <section>
+    <iframe src="https://rafa-san.github.io/curso-em-video-html-css/" style="border:none;width:90%;"></iframe>
   </section>
 
   <a href="../../index.html">Voltar</a>
