--- a/1-tutorial/07-headings/exemplo.html
+++ b/1-tutorial/07-headings/exemplo.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Attributes - Exemplo 01</title>
+  <title>HTML Attributes - Exemplo</title>
   <link rel="stylesheet" href="../../assets/principal.css">
 </head>
 
 <body>
-  <h1>HTML Attributes - Exemplo 01</h1> 
+  <h1>HTML Attributes - Exemplo</h1> 
   
   <h1>Heading 1</h1>
   <h2>Heading 2</h2>
