--- a/1-tutorial/10-formatting/exemplo.html
+++ b/1-tutorial/10-formatting/exemplo.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Formatting - Exemplo 01</title>
+  <title>HTML Formatting - Exemplo</title>
   <link rel="stylesheet" href="../../assets/principal.css">
 </head>
 
 <body>
-  <h1>HTML Formatting - Exemplo 01</h1> 
+  <h1>HTML Formatting - Exemplo</h1> 
 
   <section class="notas">
     <p><em>emphasized</em> text</p>
