--- a/1-tutorial/16-images/exemplo02.html
+++ b/1-tutorial/16-images/exemplo02.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Images</title>
+  <title>HTML Images - Exemplo 02</title>
   <link rel="stylesheet" href="../../assets/principal.css">
 </head>
 
