--- a/index.html
+++ b/index.html
@@ -10,87 +10,82 @@
 
 <body>
 
-  <h1>Tutorial de HTML</h1>
+  <h1>1-tutorial de HTML</h1>
 
   <div class="principal">
     <h2>Sumário</h2>
     <details>
       <summary>HTML</summary>
       <ol>
-        <li>Home</li>
-        <li>Introduction</li>
-        <li>Editors</li>
-        <li>Basic</li>
-        <li>Elements</li>
+        <li class="concluido">Home</li>
+        <li class="concluido">Introduction</li>
+        <li class="concluido">Editors</li>
+        <li class="concluido">Basic</li>
+        <li class="concluido">Elements</li>
+        <li class="concluido">Attributes</li>
         <li>
-          Attributes
+          Headings   ✅
           <ul>
-            <li><a href="tutorial/06-attributes/exemplo.html">Exemplo</a></li>
+            <li><a href="1-tutorial/07-headings/exemplo.html">Exemplo</a></li>
+            <li><a href="1-tutorial/07-headings/exercicios.html">Exercícios</a></li>
           </ul>
         </li>
         <li>
-          Headings
+          Paragraphs   ✅
           <ul>
-            <li><a href="tutorial/07-headings/exemplo.html">Exemplo</a></li>
-            <li><a href="tutorial/07-headings/exercicios.html">Exercícios</a></li>
+            <li><a href="1-tutorial/08-paragraphs/exemplo.html">Exemplo</a></li>
+          </ul>
+        </li>
+        <li class="concluido">Styles</li>
+        <li>
+          Formatting   ✅
+          <ul>
+            <li><a href="1-tutorial/10-formatting/exemplo.html">Exemplo</a></li>
+            <li><a href="1-tutorial/10-formatting/exercicios.html">Exercícios</a></li>
           </ul>
         </li>
         <li>
-          Paragraphs
+          Quotations   ✅
           <ul>
-            <li><a href="tutorial/08-paragraphs/exemplo.html">Exemplo</a></li>
+            <li><a href="1-tutorial/11-quotations/exemplo.html">Exemplo</a></li>
+            <li><a href="1-tutorial/11-quotations/exercicios.html">Exercícios</a></li>
           </ul>
         </li>
-        <li>Styles</li>
+        <li class="concluido">Comments</li>
         <li>
-          Formatting
-          <ul>
-            <li><a href="tutorial/10-formatting/exemplo.html">Exemplo</a></li>
-            <li><a href="tutorial/10-formatting/exercicios.html">Exercícios</a></li>
-          </ul>
-        </li>
-        <li>
-          Quotations
-          <ul>
-            <li><a href="tutorial/11-quotations/exemplo.html">Exemplo</a></li>
-            <li><a href="tutorial/11-quotations/exercicios.html">Exercícios</a></li>
-          </ul>
-        </li>
-        <li>Comments</li>
-        <li>
-          Colors
+          Colors   ✅
           <ul>
             <li>RGB</li>
             <li>HEX</li>
             <li>HSL</li>
           </ul>
         </li>
-        <li>CSS</li>
+        <li class="concluido">CSS</li>
         <li>
-          Links
+          Links   ✅
           <ul>
             <li>Colors</li>
             <li>Bookmarks</li>
-            <li><a href="tutorial/15-links/exercicios.html">Exercícios</a></li>
+            <li><a href="1-tutorial/15-links/exercicios.html">Exercícios</a></li>
           </ul>
         </li>
         <li>
-          Images
+          Images   ✅
           <ul>
             <li>Image Map</li>
             <li>Background Images</li>
             <li>The Picture Element</li>
             <li>
-              <a href="tutorial/16-images/exemplo01.html">Exemplo 01</a> | 
-              <a href="tutorial/16-images/exemplo02.html">Exemplo 02</a>
+              <a href="1-tutorial/16-images/exemplo01.html">Exemplo 01</a> | 
+              <a href="1-tutorial/16-images/exemplo02.html">Exemplo 02</a>
             </li>
-            <li><a href="tutorial/16-images/exercicios.html">Exercícios</a></li>
+            <li><a href="1-tutorial/16-images/exercicios.html">Exercícios</a></li>
           </ul>
         </li>
-        <li>Favicon</li>
-        <li>Page Title</li>
+        <li class="concluido">Favicon</li>
+        <li class="concluido">Page Title</li>
         <li>
-          Tables
+          Tables   ✅
           <ul>
             <li>Borders</li>
             <li>Sizes</li>
@@ -99,49 +94,49 @@
             <li>Colspan & Rowspan</li>
             <li>Styling</li>
             <li>Colgroup</li>
-            <li><a href="tutorial/19-tables/exemplo.html">Exemplo</a></li>
-            <li><a href="tutorial/19-tables/exercicios.html">Exercícios</a></li>
+            <li><a href="1-tutorial/19-tables/exemplo.html">Exemplo</a></li>
+            <li><a href="1-tutorial/19-tables/exercicios.html">Exercícios</a></li>
           </ul>
         </li>
         <li>
-          Lists
+          Lists   ✅
           <ul>
-            <li><a href="tutorial/20-lists/exercicios.html">Exercícios</a></li>
+            <li><a href="1-tutorial/20-lists/exercicios.html">Exercícios</a></li>
           </ul>
         </li>
         <li>
-          Block & Inline
+          Block & Inline   ✅
           <ul>
-            <li><a href="tutorial/21-block-inline/exemplo.html">Exemplo</a></li>
+            <li><a href="1-tutorial/21-block-inline/exemplo.html">Exemplo</a></li>
           </ul>
         </li>
-        <li>Classes</li>
-        <li>Id</li>
+        <li class="concluido">Classes</li>
+        <li class="concluido">Id</li>
         <li>
-          Iframes
+          Iframes   ✅
           <ul>
-            <li><a href="tutorial/24-iframes/exercicios.html">Exercícios</a></li>
+            <li><a href="1-tutorial/24-iframes/exercicios.html">Exercícios</a></li>
           </ul>
         </li>
-        <li>JavaScript</li>
-        <li>File Paths</li>
-        <li>Head</li>
-        <li>Layout</li>
-        <li>Responsive</li>
+        <li class="concluido">JavaScript</li>
+        <li class="concluido">File Paths</li>
+        <li class="concluido">Head</li>
+        <li class="concluido">Layout</li>
+        <li class="concluido">Responsive</li>
         <li>
-          Computer Code
+          Computer Code   ✅
           <ul>
-            <li><a href="tutorial/30-computercode/exercicios.html">Exercícios</a></li>
+            <li><a href="1-tutorial/30-computercode/exercicios.html">Exercícios</a></li>
           </ul>
         </li>
-        <li>Semantics</li>
-        <li>Style Guide</li>
-        <li>Entities</li>
-        <li>Symbols</li>
-        <li>Emojis</li>
-        <li>Charset</li>
-        <li>URL Encode</li>
-        <li>HTML vs. XHTML</li>
+        <li class="concluido">Semantics</li>
+        <li class="concluido">Style Guide</li>
+        <li class="concluido">Entities</li>
+        <li class="concluido">Symbols</li>
+        <li class="concluido">Emojis</li>
+        <li class="concluido">Charset</li>
+        <li class="concluido">URL Encode</li>
+        <li class="concluido">HTML vs. XHTML</li>
       </ol>
     </details>
 
@@ -151,23 +146,92 @@
         <li>
           Forms
           <ul>
-            <li><a href="tutorial/39-forms/exemplo.html">Exemplo</a></li>
+            <li><a href="2-forms/01-forms/exemplo.html">Exemplo</a></li>
           </ul>
         </li>
         <li>Form Attributes</li>
         <li>
           Form Elements
           <ul>
-            <li><a href="tutorial/41-form-elements/anotacoes.html">Anotações</a></li>
-            <li><a href="tutorial/41-form-elements/exemplo01.html">Exemplo</a></li>
+            <li><a href="2-forms/03-form-elements/anotacoes.html">Anotações</a></li>
+            <li><a href="2-forms/03-form-elements/exemplo01.html">Exemplo</a></li>
           </ul>
         </li>
         <li>
           Input Types
           <ul>
-            <li><a href="tutorial/42-input-types/exemplo01.html">Exemplo</a></li>
+            <li><a href="2-forms/04-input-types/exemplo01.html">Exemplo</a></li>
           </ul>
         </li>
+        <li>Input Attributes</li>
+        <li>Input Form Attributes</li>
+      </ol>
+    </details>
+
+    <details open>
+      <summary>GRAPHICS</summary>
+      <ol>
+        <li>Canvas</li>
+        <li>SVG</li>
+      </ol>
+    </details>
+
+    <details open>
+      <summary>MEDIA</summary>
+      <ol>
+        <li>Media</li>
+        <li>Video</li>
+        <li>Audio</li>
+        <li>Plug-ins</li>
+        <li>YouTube</li>
+      </ol>
+    </details>
+
+    <details open>
+      <summary>APIs</summary>
+      <ol>
+        <li>Geolocation</li>
+        <li>Drag/Drop</li>
+        <li>Web Storage</li>
+        <li>Web Workers</li>
+        <li>SSE</li>
+      </ol>
+    </details>
+
+    <details open>
+      <summary>EXAMPLES</summary>
+      <ol>
+        <li>Examples</li>
+        <li>Editor</li>
+        <li>Quiz</li>
+        <li class="tudo-certo">Exercises</li>
+        <li>Bootcamp</li>
+        <li>Certificate</li>
+        <li>Summary</li>
+        <li>Accessibility</li>
+      </ol>
+    </details>
+
+    <details open>
+      <summary>REFERENCES</summary>
+      <ol>
+        <li>Tag List</li>
+        <li>Attributes</li>
+        <li>Global Attributes</li>
+        <li>Browser Suport</li>
+        <li>Events</li>
+        <li>Colors</li>
+        <li>Canvas</li>
+        <li>Audio/Video</li>
+        <li>Doctypes</li>
+        <li>Character Sets</li>
+        <li>URL Encode</li>
+        <li>Language Codes</li>
+        <li>Country Codes</li>
+        <li>Messages</li>
+        <li>HTTP Methods</li>
+        <li class="concluido">PX to EM Converter</li>
+        <li class="concluido">Keybord Shortcuts</li>
       </ol>
     </details>
   </div>
