Atualizei a estrutura da versão principal

--- a/1-html/2-headings-e-paragrafos.html
+++ b/1-html/2-headings-e-paragrafos.html
@@ -3,20 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="keywords" content="HTML, CSS, JavaScript, How To">
+  <meta name="keywords" content="HTML">
   <meta name="description" content="Exercícios e exemplos de programação do site W3Schools">
   <meta name="author" content="Rafael Santana">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML - Links</title>
+  <title>HTML - Headings e Parágrafos</title>
   <link rel="stylesheet" href="../style/main.css">
   <link rel="stylesheet" href="../style/media-query.css">
   <style>
-    .container-assunto {
-      background-color: #faf8f5;
-      border: 1px solid #efece9;
-      color: #555554;
-    }
-
     .container-assunto h1 {
       font-size: 2em;
       margin: 0.67em 0;
@@ -33,16 +27,7 @@
     }
 
     .container-assunto p {
-      line-height: 2;
-    }
-
-    .container-assunto a {
-      color: black;
-      text-decoration: none;
-    }
-
-    .container-assunto a:hover {
-      text-decoration: underline;
+      line-height: 2.1;
     }
   </style>
 </head>
@@ -58,10 +43,9 @@
 
     <nav class="menu-horizontal">
       <ul>
-        <li><a href="1-introducao-html.html">HTML</a></li>
-        <li><a href="../2-css/1-introducao-css.html">CSS</a></li>
-        <li><a href="#">JavaScript</a></li>
-        <li><a href="#">How To</a></li>
+        <li><a href="1-html/1-introducao-html.html">HTML</a></li>
+        <li><a href="#">Lorem</a></li>
+        <li><a href="#">Lorem</a></li>
       </ul>
     </nav>
 
@@ -81,24 +65,14 @@
               <li><a href="2-headings-e-paragrafos.html">Headings e Parágrafos</a></li>
               <li><a href="3-formatacao-1.html">Formatação de Texto - Parte 1</a></li>
               <li><a href="4-formatacao-2.html">Formatação de Texto - Parte 2</a></li>
-              <li><a href="#">Computercode</a></li>
+              <!-- <li><a href="#">Computercode</a></li>
               <li><a href="6-links.html">Links</a></li>
               <li><a href="#">Iframes</a></li>
               <li><a href="#">Imagens</a></li>
               <li><a href="#">Tabelas</a></li>
               <li><a href="#">Listas</a></li>
               <li><a href="#">Formulários</a></li>
-              <li><a href="#">Áudio e Vídeo</a></li>
-            </ul>
-          </details>
-        </li>
-      </ol>
-      <ol>
-        <li class="toggle">
-          <details open>
-            <summary><strong>CSS</strong></summary>
-            <ul>
-              <li><a href="../2-css/1-introducao-css.html" class="link-ativo">Introdução</a></li>
+              <li><a href="#">Áudio e Vídeo</a></li> -->
             </ul>
           </details>
         </li>
@@ -107,25 +81,41 @@
   </div>
 
   <main class="container-principal">
-    <h1>Links</h1>
-      
-    <section class="container-assunto"> 
-      <h2>Melhores Sites para Aprender a Programar</h2>
-      <p>Na minha opinião, os melhores sites para aprender <abbr title="Hyper Text Markup Language"><strong>HTML</strong></abbr>, <abbr title="Cascading Style Sheets"><strong>CSS</strong></abbr> e <strong>JavaScript</strong> são esses aqui:</p>
-      <a href="https://www.cursoemvideo.com/" target="_blank" title="Visite o site Curso em Vídeo">Curso em Vídeo</a> <br>
-      <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web" target="_blank" title="Visite o site Mozilla MDN">Mozilla MDN</a> <br> 
-      <a href="https://www.w3schools.com/" target="_blank" title="Visite o site W3Schools">W3Schools</a>
-      <p>São sites muito didáticos que fornecem inúmeros exemplos e exercícios para que você possa praticar bastante e assimilar o conhecimento. Os três possuem conteúdo de qualidade e gratuito, vale a pena conhecer!</p>
+    <h1>Headings e Parágrafos</h1>
+
+    <section class="container-assunto">
+      <h1>Cultura Popular Brasileira</h1>
+      <p>A cultura popular é o conjunto de tradições de um povo, tais como danças, folguedos, cantorias, artesanato, contos, lendas, crenças e festas. No caso brasileiro, ela se constitui com contribuições das três vertentes majoritárias de nossa formação cultural: a indígena, a africana e a europeia.</p>
+
+      <h2>Artesanato</h2>
+      <p>São objetos utilitários ou decorativos feitos a mão, com padrão  estético próprio, determinado pela cultura da região em que são produzidos. Entre as técnicas, destacam-se:</p>
+
+      <h3>Cerâmica</h3>
+      <p>Feitos com massa de argila queimada, os objetos de cerâmica possuem características conforme a região.</p>
+
+      <h3>Cestarias e Trançados</h3>
+      <p>Artesanato de influência indígena, executado com fibras vegetais de palmeiras como o buriti, comum no Norte e no Nordeste.</p>
+
+      <h3>Madeira</h3>
+      <p>Destacam-se as carrancas, colocadas na proa dos barcos no rio São Francisco para espantar os maus espíritos, e os bancos Tukano, feitos por indígenas do noroeste amazônico.</p>
+
+      <h3>Pedra-Sabão</h3>
+      <p>Dessa pedra são feitos objetos decorativos, gamelas e artesanato típico das cidades históricas de Minas Gerais.</p>
+
+      <h3>Rendas</h3>
+      <p>As mais famosas vêm do Ceará e de Santa Catarina, onde é possível encontrar as de bilro (prosuzidas em almofadas) e as de crivo (feitas em tecido).</p>
+
+      <h3>Tecelagem</h3>
+      <p>Os tapetes mais famosos vêm do Nordeste e do Sul. No Rio Grande do Sul, destacam-se mantas e ponchos.</p>
     </section>
 
     <h2>Tags utilizadas no exemplo acima</h2>
-    <p><em>em ordem alfabética</em></p>
+    <p><em>em ordem alfábetica</em></p>
     <section class="tags-utilizadas">
-      <div>&lt;a&gt;</div>
-      <div>&lt;abbr&gt;</div>
-      <div>&lt;h2&gt;</div>
-      <div>&lt;p&gt;</div>
-      <div>&lt;strong&gt;</div>
+      <div><code>&lt;h1&gt;</code></div>
+      <div><code>&lt;h2&gt;</code></div>
+      <div><code>&lt;h3&gt;</code></div>
+      <div><code>&lt;p&gt;</code></div>
     </section>
 
   </main>
