--- a/1-html/4-formatacao-2.html
+++ b/1-html/4-formatacao-2.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="keywords" content="HTML, CSS, JavaScript, How To">
+  <meta name="keywords" content="HTML">
   <meta name="description" content="Exercícios e exemplos de programação do site W3Schools">
   <meta name="author" content="Rafael Santana">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,10 +56,9 @@
 
     <nav class="menu-horizontal">
       <ul>
-        <li><a href="1-introducao-html.html">HTML</a></li>
-        <li><a href="../2-css/1-introducao-css.html">CSS</a></li>
-        <li><a href="#">JavaScript</a></li>
-        <li><a href="#">How To</a></li>
+        <li><a href="1-html/1-introducao-html.html">HTML</a></li>
+        <li><a href="#">Lorem</a></li>
+        <li><a href="#">Lorem</a></li>
       </ul>
     </nav>
 
@@ -79,24 +78,14 @@
               <li><a href="2-headings-e-paragrafos.html">Headings e Parágrafos</a></li>
               <li><a href="3-formatacao-1.html">Formatação de Texto - Parte 1</a></li>
               <li><a href="4-formatacao-2.html">Formatação de Texto - Parte 2</a></li>
-              <li><a href="#">Computercode</a></li>
+              <!-- <li><a href="#">Computercode</a></li>
               <li><a href="6-links.html">Links</a></li>
               <li><a href="#">Iframes</a></li>
               <li><a href="#">Imagens</a></li>
               <li><a href="#">Tabelas</a></li>
               <li><a href="#">Listas</a></li>
               <li><a href="#">Formulários</a></li>
-              <li><a href="#">Áudio e Vídeo</a></li>
-            </ul>
-          </details>
-        </li>
-      </ol>
-      <ol>
-        <li class="toggle">
-          <details open>
-            <summary><strong>CSS</strong></summary>
-            <ul>
-              <li><a href="../2-css/1-introducao-css.html" class="link-ativo">Introdução</a></li>
+              <li><a href="#">Áudio e Vídeo</a></li> -->
             </ul>
           </details>
         </li>
